# Anomaly_Behavior_Detect

./: README.md
.github/workflows/: lint.yml
Model/main_service/: .gitignore  config.py  db.py  main.py  models.py  pyproject.toml  schemas.py  test_camera.py
Model/main_service/alembic/: env.py
Model/main_service/alembic/versions/: a24ef54834d1_initial_schema.py  d090578f204b_changed_to_fastapi_users.py
Model/main_service/routers/: admin.py  health.py  stats.py
Model/triton_service/model_repository/ensemble/: config.pbtxt
Model/triton_service/model_repository/stead/: config.pbtxt
Model/triton_service/model_repository/x3d/: config.pbtxt
Web/backend/: .gitignore  go.mod  go.sum
Web/backend/bootstrap/: app.go
Web/backend/cmd/server/: main.go
Web/backend/config/: database.go
Web/backend/controllers/: alert_controller.go  auth_controller.go  building_controller.go  camera_controller.go  floor_controller.go  stream_controller.go
Web/backend/middleware/: auth.go
Web/backend/models/: alert.go  building.go  camera.go  floor.go  user.go
Web/backend/routes/: routes.go
Web/backend/services/: alert_service.go  auth_service.go  building_service.go  camera_service.go  floor_service.go  stream_service.go
Web/backend/tests/services/: camera_service_test.go
Web/frontend/: package.json  pnpm-lock.yaml
Web/frontend/app/: layout.tsx  page.tsx
Web/frontend/app/alerts/: page.tsx
Web/frontend/app/buildings/: page.tsx
Web/frontend/app/docs/: layout.tsx  page.tsx
Web/frontend/app/possibilities/: page.tsx
Web/frontend/components/docs/: docs-sidebar.tsx
(+9 files in other folders)
